# dragonfly

./: .dockerignore  .gitmodules  NOTES  NOTES.txt  TODO
dragonfly/: Cargo.toml  text_chars.py
dragonfly/benches/: mutators.rs  random_generators.rs  random_whitespace.rs
dragonfly/fuzz/: Cargo.toml  fuzz.sh
dragonfly/fuzz/fuzz_targets/: all_mutators.rs  mutate_split.rs  mutate_swap_words.rs  tokenstream_roundtrip.rs
dragonfly/src/: executor.rs  feedback.rs  graph.rs  input.rs  lib.rs  observer.rs  scheduler.rs  stats.rs  token.rs
dragonfly/src/components/: executor.rs  input.rs  mod.rs
dragonfly/src/components/mutators/: content.rs  copy.rs  create.rs  delete.rs  mod.rs  repeat.rs  swap.rs  token.rs
dragonfly/src/mutators/: common.rs  copy.rs  crossover.rs  delete.rs  dict.rs  duplicate.rs  flip.rs  generate.rs  interesting.rs  mod.rs  mopt.rs  nop.rs  packet.rs  random.rs  reorder.rs  repeat.rs  scheduled.rs  selected.rs  selector.rs  special.rs  split.rs  swap.rs  truncate.rs
dragonfly/src/tests/: compile.rs  compile2.rs  mod.rs  mutators.rs  tt_mutators.rs
dragonfly/src/tests/packet_channel/: Makefile  mod.rs  test.c
dragonfly/src/tests/packet_mutators/: mod.rs
dragonfly/src/tests/simple_server/: .gitignore  Makefile  README.md  baseline.c  mod.rs  test.c
dragonfly/src/tests/state_channel/: .gitignore  Makefile  mod.rs  test.c
dragonfly/src/tests/tt_mutators/: mod.rs
dragonfly/src/tokens/: mod.rs  token.rs
dragonfly/src/tokens/mutators/: copy.rs  crossover.rs  delete.rs  dict.rs  flip.rs  interesting.rs  mod.rs  random.rs  repeat.rs  special.rs  split.rs  swap.rs  truncate.rs
dragonfly/src/tt/: mod.rs  token.rs
dragonfly/src/tt/mutators/: case.rs  convert.rs  copy.rs  delete.rs  dicts.rs  duplicate.rs  interesting.rs  mod.rs  random.rs  repeat.rs  rotate.rs  scanner.rs  special.rs  split.rs  swap.rs  transform.rs  value.rs
evaluation/: .gitignore  README.md  abort.py  gen-config.sh  group  passwd  patch
evaluation/ProFTPD/: .gitignore  Dockerfile  README.md  bug-2.patch  bug-3.patch  config  entrypoint.sh  ftp.dict  patch  pool.patch
evaluation/ProFTPD/analysis/: libafl_coverage.py  libafl_crashes.py  libafl_exec_speed.py
evaluation/ProFTPD/fuzzer/: Cargo.toml
evaluation/ProFTPD/fuzzer/src/: main.rs
evaluation/ProFTPD/patches/: bug-1.patch  bug-4.patch  bug-5.patch  bug-6.patch  bug-7.patch
evaluation/aflnet/: .gitignore  Dockerfile  Dockerfile-cov  Dockerfile-fuzz  patch  patch-aflnet  plot.py  speed.py
evaluation/dragonfly/: .gitignore  Dockerfile  Dockerfile-cov  Dockerfile-debug  Dockerfile-fuzz  patch  patch-asan  patch-cov  patch-dbg  patch-state  plot.py  speed.py
evaluation/dragonfly/fuzzer/: Cargo.toml  build.rs  ftp.dict  generator.c  generator.c.h  grammar.chm
evaluation/dragonfly/fuzzer/src/: main.rs
evaluation/fuzzer/: Cargo.toml  ftp.dict
evaluation/fuzzer/src/: main.rs
evaluation/fuzzer_primitive/: .gitignore  Cargo.toml
evaluation/fuzzer_primitive/src/: main.rs
libdragonfly/: conn_pool.c  conn_pool.h  meson.build  meson_options.txt  packet_channel.c  packet_channel.h
libdragonfly/libdesock/include/: hooks.h  peekbuffer.h
libdragonfly/libdesock/src/: accept.c  close.c  connect.c  desock.c  dup.c  epoll.c  hooks.c  main.c  peekbuffer.c  read.c  select.c  shutdown.c  syscall.c  write.c
libdragonfly/tests/: .gitignore  Makefile  bench_packet_decode.c  packet_channel_bytewise.c  read_shm.c  server_multi.c  server_single.c  test_dup.c
