[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libafl_bolts = "0.11.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "random_whitespace"
harness = false
