[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libafl_bolts = "0.11.2"
libafl = "0.11.2"
smallvec = "1.13"
ahash = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "random_generators"
harness = false

[[bench]]
name = "mutators"
harness = false
