[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
libafl_bolts = "0.12.0"
libafl = "0.12.0"
smallvec = "1.13"
ahash = "0.8"
clap = { version = "4.5.1", features = ["derive"] }
nix = { version = "0.27", features = ["signal", "process"] }
libc = "0.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "random_generators"
harness = false

[[bench]]
name = "mutators"
harness = false
