[package]
name = "dragonfly-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[profile.release]
opt-level = 3
panic = "abort"
debug = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
libafl_bolts = "0.11.2"
libafl = "0.11.2"
ahash = "0.8"

[dependencies.dragonfly]
path = ".."

[[bin]]
name = "mutate_split"
path = "fuzz_targets/mutate_split.rs"
test = false
doc = false
bench = false

[[bin]]
name = "mutate_swap_words"
path = "fuzz_targets/mutate_swap_words.rs"
test = false
doc = false
bench = false

[[bin]]
name = "all_mutators"
path = "fuzz_targets/all_mutators.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tokenstream_roundtrip"
path = "fuzz_targets/tokenstream_roundtrip.rs"
test = false
doc = false
bench = false
