[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"
debug = true
codegen-units = 1

[dependencies]
libafl = "0.11.2"
libafl_bolts = "0.11.2"
dragonfly = { path = "../../../dragonfly" }
nix = "0.26"
serde = "1.0"
clap = { version = "4.3", features = ["default", "derive"] }
