[package]
name = "fuzzer_dragonfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"
debug = true
codegen-units = 1

[dependencies]
libafl = "0.11.1"
libafl_bolts = "0.11.1"
dragonfly = { path = "../../../dragonfly" }
nix = "0.26"
serde = "1.0"
clap = { version = "4.3", features = ["default", "derive"] }

[build-dependencies]
cc = "1.0"
